Fix overlap

--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -37,7 +37,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #000;
+  background-color: #fff;
 }
 body {
   font-family: Roboto, sans-serif;
@@ -61,7 +61,7 @@ body {
 }
 
 .startButton {
-  padding-top: 135px;
+  padding-top: 75px;
 }
 
 .cover-container {
@@ -108,58 +108,7 @@ body {
     width: 100%;
 }
 
-/* VIDEO BACKGROUND 
-
-.video-background {
-  z-index:550;
-  text-align:center;
-  height:100%;
-  min-height:100%;
-  position:relative;
-  overflow:hidden
-}
-
-.video-background .video-background-container {
-  width:830px;
-  max-width:100%;
-  display:inline-block;
-  position:absolute;
-  top:50%;
-  left:50%;
-  -webkit-transform:translate(-50%,-50%);
-  -moz-transform:translate(-50%,-50%);
-  -ms-transform:translate(-50%,-50%);
-  -o-transform:translate(-50%,-50%);
-  transform:translate(-50%,-50%)
-}
-
-.video-background-title {
-  font-size:78px;
-  color:#fff;
-  font-weight:300;
-  text-transform:uppercase;
-  text-align:center;
-  margin-bottom:22px;
-  padding-top:20px;
-  display:inline-block;
-  background-attachment:scroll;
-  background-repeat:repeat-x;
-  background-position:top center
-}
-
-.video-background-default-image {
-  background:url(img/cover.jpg);
-  background-repeat:no-repeat;
-  background-position:center center;
-  background-size:cover;
-  width:100%;
-  height:100%;
-  z-index:0;
-  backface-visibility:hidden
-}
-
-*/
-
+/* Video Background */
 .video-js {
     background-color: #fff;
     position: fixed;
